Server configuration update

--- a/tests/setup/nginx/yetiforce.conf
+++ b/tests/setup/nginx/yetiforce.conf
@@ -25,6 +25,16 @@ header_filter_by_lua_block {
 ##  nginx module: headers-more-nginx-module
 # https://github.com/openresty/headers-more-nginx-module#installation
 # https://www.nginx.com/blog/compiling-dynamic-modules-nginx-plus/
+more_clear_headers 'Server';
+more_clear_headers 'X-Frame-Options';
+more_clear_headers 'X-XSS-Protection';
+more_clear_headers 'X-Content-Type-Options';
+more_clear_headers 'Referrer-Policy';
+more_clear_headers 'Strict-Transport-Security';
+more_clear_headers 'X-Robots-Tag';
+more_clear_headers 'X-Permitted-Cross-Domain-Policies';
+more_clear_headers 'Expect-CT';
+
 more_set_headers 'Server: ';
 more_set_headers 'X-Frame-Options: SAMEORIGIN';
 more_set_headers 'X-XSS-Protection: 1; mode=block';
@@ -34,7 +44,6 @@ more_set_headers 'Strict-Transport-Security: max-age=31536000; includeSubDomains
 more_set_headers 'X-Robots-Tag: none';
 more_set_headers 'X-Permitted-Cross-Domain-Policies: none';
 more_set_headers 'Expect-CT: enforce; max-age=3600';
-more_set_headers 'Cache-Control: private, no-cache, no-store, must-revalidate, post-check=0, pre-check=0';
 
 ##########################
 ##       Stability      ##
@@ -60,11 +69,15 @@ gzip_vary on;
 gzip_comp_level 6;
 gzip_min_length 500;
 gzip_disable "msie6";
+
 #add_header Cache-Control "private, no-cache, no-store, must-revalidate, post-check=0, pre-check=0" always;
+more_clear_headers 'Cache-Control';
+more_set_headers 'Cache-Control: private, no-cache, no-store, must-revalidate, post-check=0, pre-check=0';
 location ~* \.(?:css(\.map)?|js(\.map)?|jpe?g|png|gif|ico|cur|heic|webp|tiff?|mp3|m4a|aac|ogg|midi?|wav|mp4|mov|webm|mpe?g|avi|ogv|flv|wmv|ttf|ttc|otf|eot|woff2?)$ {
 	access_log off;
 	expires 1d;
-	#add_header Cache-Control public;
+	#add_header Cache-Control public always;
+	more_clear_headers 'Cache-Control';
 	more_set_headers 'Cache-Control: public';
 	etag on;
 }
