Development of interactive OpenAPI documentation

--- a/api/doc/WebservicePremium.yaml
+++ b/api/doc/WebservicePremium.yaml
@@ -3791,7 +3791,7 @@ components:
       type: object
       externalDocs:
         description: 'Database communication engine'
-        url: 'https://yetiforce.com/en/knowledge-base/documentation/developer-documentation/item/new-db-communication-engine'
+        url: 'https://doc.yetiforce.com/developer-guides/system-components/databases'
       example:
         column_name1: 'searched value 1'
         column_name2: 'searched value 2'
