Migrate from Chart.js to Apache ECharts (#17141)
* Migrate from Chart.js to Apache ECharts

--- a/package.json
+++ b/package.json
@@ -34,9 +34,6 @@
     "bootstrap-datepicker": "^1.9.0",
     "bootstrap-daterangepicker": "^3.0.4",
     "bootstrap-tabdrop": "https://github.com/jmschabdach/bootstrap-tabdrop",
-    "chart.js": "^2.9.4",
-    "chartjs-plugin-datalabels": "^1.0.0",
-    "chartjs-plugin-funnel": "^1.1.5",
     "clipboard": ">=2.0.0",
     "clockpicker": "https://github.com/djibe/clockpicker#gh-pages",
     "css-element-queries": "^1.2.3",
@@ -88,7 +85,8 @@
     "tributejs": "^5.0.0",
     "url-polyfill": "^1.1.7",
     "vue": "^2.6.11",
-    "whatwg-fetch": "^3.6.2"
+    "whatwg-fetch": "^3.6.2",
+    "echarts": "^5.4.2"
   },
   "resolutions": {},
   "bugs": {
