Development of interactive OpenAPI documentation

--- a/api/doc/ManageConsents.yaml
+++ b/api/doc/ManageConsents.yaml
@@ -423,3 +423,6 @@ components:
       description: 'Webservice api token by user header'
       name: X-TOKEN
       in: header
+externalDocs:
+  description: 'Platform API Interactive Docs'
+  url: 'https://doc.yetiforce.com/api/?urls.primaryName=Manage%20consents'
