--- a/api/doc/PBX.yaml
+++ b/api/doc/PBX.yaml
@@ -320,3 +320,16 @@ components:
           type: string
           example: '2022-11-04 09:17:26'
       type: object
+    PBX_Genesys_RegisterInteractionCampaign_Response:
+      title: ' Response for creating interactions campaign'
+      required:
+        - status
+      properties:
+        status:
+          description: 'That indicates whether the communication is valid. 1 - success , 0 - error'
+          type: integer
+          example: 1
+      type: object
+externalDocs:
+  description: 'Platform API Interactive Docs'
+  url: 'https://doc.yetiforce.com/api/?urls.primaryName=PBX'
