--- a/api/doc/OAuth.yaml
+++ b/api/doc/OAuth.yaml
@@ -1,1 +1,23 @@
 openapi: 3.0.0
+info:
+  title: 'YetiForce API for OAuth. Type: OAuth'
+  description: ''
+  termsOfService: 'https://yetiforce.com/'
+  contact:
+    name: 'Devs API Team'
+    url: 'https://yetiforce.com/'
+    email: devs@yetiforce.com
+  license:
+    name: 'YetiForce Public License'
+    url: 'https://yetiforce.com/en/yetiforce/license'
+  version: '0.1'
+servers:
+  -
+    url: 'https://gitdeveloper.yetiforce.com'
+    description: 'Demo server of the development version'
+  -
+    url: 'https://gitstable.yetiforce.com'
+    description: 'Demo server of the latest stable version'
+externalDocs:
+  description: 'Platform API Interactive Docs'
+  url: 'https://doc.yetiforce.com/api/?urls.primaryName=OAuth'
