--- a/api/doc/Token.yaml
+++ b/api/doc/Token.yaml
@@ -57,3 +57,6 @@ components:
       description: Response
       type: string
       example: OK
+externalDocs:
+  description: 'Platform API Interactive Docs'
+  url: 'https://doc.yetiforce.com/api/?urls.primaryName=Token'
