--- a/api/doc/WebservicePremium.yaml
+++ b/api/doc/WebservicePremium.yaml
@@ -4320,12 +4320,19 @@ tags:
   -
     name: BaseModule
     description: 'Access to record methods'
+    x-displayName: 'Base module'
   -
     name: BaseAction
     description: 'Access to user methods'
+    x-displayName: 'Base actions'
   -
     name: Products
     description: 'Products methods'
+    x-displayName: Products
   -
     name: Users
     description: 'Access to user methods'
+    x-displayName: Users
+externalDocs:
+  description: 'Platform API Interactive Docs'
+  url: 'https://doc.yetiforce.com/api/?urls.primaryName=Webservice%20Premium'
