--- a/api/doc/ManageConsents.yaml
+++ b/api/doc/ManageConsents.yaml
@@ -423,6 +423,16 @@ components:
       description: 'Webservice api token by user header'
       name: X-TOKEN
       in: header
+tags:
+  -
+    name: BaseModule
+    x-displayName: 'Base module'
+  -
+    name: ApprovalsRegister
+    x-displayName: 'Approvals register'
+  -
+    name: Approvals
+    x-displayName: Approvals
 externalDocs:
   description: 'Platform API Interactive Docs'
   url: 'https://doc.yetiforce.com/api/?urls.primaryName=Manage%20consents'
