--- a/api/doc/WebserviceStandard.yaml
+++ b/api/doc/WebserviceStandard.yaml
@@ -1612,6 +1612,7 @@ paths:
         -
           basicAuth: []
           ApiKeyAuth: []
+          token: []
     post:
       tags:
         - Users
@@ -1661,6 +1662,7 @@ paths:
         -
           basicAuth: []
           ApiKeyAuth: []
+          token: []
   /webservice/WebserviceStandard/Users/TwoFactorAuth:
     get:
       tags:
@@ -1802,6 +1804,108 @@ paths:
           token: []
 components:
   schemas:
+    Header-Encrypted:
+      title: 'Header - Encrypted'
+      description: 'Is the content request is encrypted'
+      type: integer
+      default: 0
+      enum:
+        - 0
+        - 1
+    Exception:
+      title: 'General - Error exception'
+      required:
+        - status
+        - error
+      properties:
+        status:
+          title: '0 - error'
+          description: 'Webservice standard container - Get elements of menu class.'
+          type: integer
+          enum:
+            - 0
+          example: 0
+        error:
+          description: 'Error  details'
+          required:
+            - message
+            - code
+          properties:
+            message:
+              description: 'To show more details turn on: config\Debug.php apiShowExceptionMessages = true'
+              type: string
+              example: 'Invalid method'
+            code:
+              type: integer
+              example: 405
+            file:
+              description: 'default disabled to enable set: config\Debug.php apiShowExceptionBacktrace = true'
+              type: string
+              example: api\webservice\WebserviceStandard\BaseAction\Files.php
+            line:
+              description: 'default disabled to enable set: config\Debug.php apiShowExceptionBacktrace = true'
+              type: integer
+              example: 101
+            previous:
+              description: 'Previous exception'
+              type: object
+            backtrace:
+              description: 'default disabled to enable set: config\Debug.php apiShowExceptionBacktrace = true'
+              type: string
+              example: '#0 api\webservice\WebserviceStandard\BaseAction\Files.php (101) ....'
+          type: object
+      type: object
+    Conditions-Mix-For-Query-Generator:
+      title: 'General - Mix conditions for query generator'
+      description: 'Multiple or one condition for a query generator'
+      type: object
+      oneOf:
+        -
+          $ref: '#/components/schemas/Condition-For-Query-Generator'
+        -
+          $ref: '#/components/schemas/Conditions-For-Query-Generator'
+    Condition-For-Query-Generator:
+      title: 'General - Condition for query generator'
+      description: 'One condition for query generator'
+      required:
+        - fieldName
+        - value
+        - operator
+      properties:
+        fieldName:
+          description: 'Field name'
+          type: string
+          example: lastname
+        value:
+          description: 'Search value'
+          type: string
+          example: Kowalski
+        operator:
+          description: 'Field operator'
+          type: string
+          example: e
+        group:
+          description: 'Condition group if true is AND'
+          type: boolean
+          example: true
+      type: object
+    Conditions-For-Query-Generator:
+      title: 'General - Conditions for query generator'
+      description: 'Multiple conditions for query generator'
+      type: object
+      additionalProperties:
+        description: 'Condition details'
+        type: object
+    Conditions-For-Native-Query:
+      title: 'General - Conditions for native query'
+      description: 'Conditions for native query, based on YII 2'
+      type: object
+      externalDocs:
+        description: 'Database communication engine'
+        url: 'https://doc.yetiforce.com/developer-guides/system-components/databases'
+      example:
+        column_name1: 'searched value 1'
+        column_name2: 'searched value 2'
     BaseAction_Files_Request:
       title: 'Base action - Files request schema'
       description: 'Action parameters to download the file'
@@ -2571,65 +2675,6 @@ components:
           type: boolean
           example: false
       type: object
-    Header-Encrypted:
-      title: 'Header - Encrypted'
-      description: 'Is the content request is encrypted'
-      type: integer
-      default: 0
-      enum:
-        - 0
-        - 1
-    Conditions-Mix-For-Query-Generator:
-      title: 'General - Mix conditions for query generator'
-      description: 'Multiple or one condition for a query generator'
-      type: object
-      oneOf:
-        -
-          $ref: '#/components/schemas/Condition-For-Query-Generator'
-        -
-          $ref: '#/components/schemas/Conditions-For-Query-Generator'
-    Condition-For-Query-Generator:
-      title: 'General - Condition for query generator'
-      description: 'One condition for query generator'
-      required:
-        - fieldName
-        - value
-        - operator
-      properties:
-        fieldName:
-          description: 'Field name'
-          type: string
-          example: lastname
-        value:
-          description: 'Search value'
-          type: string
-          example: Kowalski
-        operator:
-          description: 'Field operator'
-          type: string
-          example: e
-        group:
-          description: 'Condition group if true is AND'
-          type: boolean
-          example: true
-      type: object
-    Conditions-For-Query-Generator:
-      title: 'General - Conditions for query generator'
-      description: 'Multiple conditions for query generator'
-      type: object
-      additionalProperties:
-        description: 'Condition details'
-        type: object
-    Conditions-For-Native-Query:
-      title: 'General - Conditions for native query'
-      description: 'Conditions for native query, based on YII 2'
-      type: object
-      externalDocs:
-        description: 'Database communication engine'
-        url: 'https://doc.yetiforce.com/developer-guides/system-components/databases'
-      example:
-        column_name1: 'searched value 1'
-        column_name2: 'searched value 2'
     Users_Post_Login_Request:
       title: 'Users module - Users login request body'
       description: 'JSON or form-data'
@@ -2785,48 +2830,6 @@ components:
             2faObligatory:
               type: boolean
               example: true
-          type: object
-      type: object
-    Exception:
-      title: 'General - Error exception'
-      required:
-        - status
-        - error
-      properties:
-        status:
-          title: '0 - error'
-          type: integer
-          enum:
-            - 0
-          example: 0
-        error:
-          description: 'Error  details'
-          required:
-            - message
-            - code
-          properties:
-            message:
-              description: 'To show more details turn on: config\Debug.php apiShowExceptionMessages = true'
-              type: string
-              example: 'Invalid method'
-            code:
-              type: integer
-              example: 405
-            file:
-              description: 'default disabled to enable set: config\Debug.php apiShowExceptionBacktrace = true'
-              type: string
-              example: api\webservice\WebserviceStandard\BaseAction\Files.php
-            line:
-              description: 'default disabled to enable set: config\Debug.php apiShowExceptionBacktrace = true'
-              type: integer
-              example: 101
-            previous:
-              description: 'Previous exception'
-              type: object
-            backtrace:
-              description: 'default disabled to enable set: config\Debug.php apiShowExceptionBacktrace = true'
-              type: string
-              example: '#0 api\webservice\WebserviceStandard\BaseAction\Files.php (101) ....'
           type: object
       type: object
     UsersLogoutResponseBody:
