--- a/.github/workflows/doc-checker.yml
+++ b/.github/workflows/doc-checker.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [7.4, 8.0]
+        php: [8.0, 8.1, 8.2]
     name: Doc Checker PHP${{ matrix.php }}
     steps:
       - uses: actions/checkout@v3
@@ -44,10 +44,9 @@ jobs:
             cat phpDoc/reports/errors.html
             exit 3
           fi
-      - name:  Upload artifact Logs
+      - name: Upload artifact Logs
         if: ${{ always() }}
         uses: actions/upload-artifact@v3
         with:
           name: Reports
           path: phpDoc/
-          
